Also, 1.23.2 introduced an automatic new version check. This may be considered
inappropriate by distribution packagers, so 1.23.3 adds build option
-DBRANDY_NOVERCHECK to disable this.

* 1.23.7 - 
- System: Addd a config file option for default LISTO value.
- Graphics: Fix a regression involving horizontal line drawing - thank you
  Richard Russell!


* 1.23.6 - 19 October 2025
- System: Fix bugs in scrolling up and down when a text window is active.
- System: Text-mode builds now handle VDU21 and VDU6.
- Graphics: Segment and sector drawing functions implemented - thank you
  Mike Fairbank!
- BASIC: Permit variables of the form name# for floating-point variables.
  BBCSDL uses this suffix to explicitly specify a FP variable, as it uses
  suffixless variables as "variants" which can change their nature.
- BASIC: Fixed a bug where RENUMBER on a program with a REM would make the
  program un-RUN-able.
- BASIC: MOD and DIV with floating-point arguments are now supported.
  (They are, of course, converted to ints before processing.)
- BASIC: Fixed a subtle bug in comparison functions where comparing large
  64-bit integers that can't be accurately stored in a float may give
  incorrect answers.
- BASIC: The vector dot product now works correctly. (Note this doesn't work
  in RISC OS ARM BBC BASIC, but now works the same as BBCSDL.)

* 1.23.5 - 06 April 2025
- General: Implement code fixes based on GCC 14.2's -fanalyze feature.
- System: Fix an intermittent hang on the version check due to network
  conditions, and a crash if unexpected data is received.
- System: Fix a recursion counter leak.
- Graphics: Can now zoom the window, use command line -zoom <factor> or config
  file entry zoom <factor> in the range 1-4.
- MOS: *LOAD and *SAVE display a warning if Hex64 mode is not enabled on 64-bit
  platforms.
- BASIC: Fix behaviour of RESTORE LOCAL with implied LOCAL of variables passed
  into a function or procedure.