@@ -148,39 +148,48 @@ static modetails modetable [127] = {
 /* 61 */  {0, 0,   2, 0,  0, 0, 0, 1, 1,  FALSE},
 /* 62 */  {0, 0,   2, 0,  0, 0, 0, 1, 1,  FALSE},
 /* 63 */  {0, 0,   2, 0,  0, 0, 0, 1, 1,  FALSE},
-/* Third party modes start here */ 
+/* Third party modes start here */
+/* These next 6 modes (some duplicates of RISC OS modes) are from PiTubeDirect */
+/* Note that 16BPP modes aren't supported, so 24bpp is used instead */
+/* 64 */  { 640, 512,      256, 1280,  1024,  80, 64, 1, 1,  TRUE}, /* Same as MODE 21 */
+/* 65 */  {1280,1024,      256, 1280,  1024, 160,128, 1, 1,  TRUE},
+/* 66 */  { 640, 512, COL24BIT, 1280,  1024,  80, 64, 1, 1,  TRUE},
+/* 67 */  {1280,1024, COL24BIT, 1280,  1024, 160,128, 1, 1,  TRUE},
+/* 68 */  { 640, 512, COL24BIT, 1280,  1024,  80, 64, 1, 1,  TRUE},
+/* 69 */  {1280,1024, COL24BIT, 1280,  1024, 160,128, 1, 1,  TRUE},
 /* These next 5 modes use the same coordinate system as Tektronix */
-/* 64 */  {1024, 780,        2, 2048,  1560, 128, 97, 1, 1,  TRUE},
-/* 65 */  {1024, 780,        4, 2048,  1560, 128, 97, 1, 1,  TRUE},
-/* 66 */  {1024, 780,       16, 2048,  1560, 128, 97, 1, 1,  TRUE},
-/* 67 */  {1024, 780,      256, 2048,  1560, 128, 97, 1, 1,  TRUE},
-/* 68 */  {1024, 780, COL24BIT, 2048,  1560, 128, 97, 1, 1,  TRUE},
-/* 69 */  {1024, 576,        2, 2048,  1152, 128, 72, 1, 1,  TRUE},
-/* 70 */  {1024, 576,        4, 2048,  1152, 128, 72, 1, 1,  TRUE},
-/* 71 */  {1024, 576,       16, 2048,  1152, 128, 72, 1, 1,  TRUE},
-/* 72 */  {1024, 576,      256, 2048,  1152, 128, 72, 1, 1,  TRUE},
-/* 73 */  {1024, 576, COL24BIT, 2048,  1152, 128, 72, 1, 1,  TRUE},
+/* 70 */  {1024, 780,        2, 2048,  1560, 128, 97, 1, 1,  TRUE},
+/* 71 */  {1024, 780,        4, 2048,  1560, 128, 97, 1, 1,  TRUE},
+/* 72 */  {1024, 780,       16, 2048,  1560, 128, 97, 1, 1,  TRUE},
+/* 73 */  {1024, 780,      256, 2048,  1560, 128, 97, 1, 1,  TRUE},
+/* 74 */  {1024, 780, COL24BIT, 2048,  1560, 128, 97, 1, 1,  TRUE},
+/* These next 5 modes are widescreen standard-definition PAL frame size */
+/* 75 */  {1024, 576,        2, 2048,  1152, 128, 72, 1, 1,  TRUE},
+/* 76 */  {1024, 576,        4, 2048,  1152, 128, 72, 1, 1,  TRUE},
+/* 77 */  {1024, 576,       16, 2048,  1152, 128, 72, 1, 1,  TRUE},
+/* 78 */  {1024, 576,      256, 2048,  1152, 128, 72, 1, 1,  TRUE},
+/* 79 */  {1024, 576, COL24BIT, 2048,  1152, 128, 72, 1, 1,  TRUE},
 /* Some modes good for full-screen use */
-/* 74 */  {1360, 384,        2, 2720,  1536, 170, 48, 1, 2, TRUE},
-/* 75 */  {1360, 384,        4, 2720,  1536, 170, 48, 1, 2, TRUE},
-/* 76 */  {1360, 384,       16, 2720,  1536, 170, 48, 1, 2, TRUE},
-/* 77 */  {1360, 384,      256, 2720,  1536, 170, 48, 1, 2, TRUE},
-/* 78 */  {1360, 384, COL24BIT, 2720,  1536, 170, 36, 1, 2, TRUE},
-/* 79 */  {1360, 768,        2, 2720,  1536, 170, 96, 1, 1, TRUE},
-/* 80 */  {1360, 768,        4, 2720,  1536, 170, 96, 1, 1, TRUE},
-/* 81 */  {1360, 768,       16, 2720,  1536, 170, 96, 1, 1, TRUE},
-/* 82 */  {1360, 768,      256, 2720,  1536, 170, 96, 1, 1, TRUE},
-/* 83 */  {1360, 768, COL24BIT, 2720,  1536, 170, 96, 1, 1, TRUE},
-/* 84 */  {1920, 540,        2, 2720,  1536, 240, 67, 1, 2, TRUE},
-/* 85 */  {1920, 540,        4, 2720,  1536, 240, 67, 1, 2, TRUE},
-/* 86 */  {1920, 540,       16, 2720,  1536, 240, 67, 1, 2, TRUE},
-/* 87 */  {1920, 540,      256, 2720,  1536, 240, 67, 1, 2, TRUE},
-/* 88 */  {1920, 540, COL24BIT, 2720,  1536, 240, 67, 1, 2, TRUE},
-/* 89 */  {1920,1080,        2, 3840,  2160, 240,135, 1, 1, TRUE},
-/* 90 */  {1920,1080,        4, 3840,  2160, 240,135, 1, 1, TRUE},
-/* 91 */  {1920,1080,       16, 3840,  2160, 240,135, 1, 1, TRUE},
-/* 92 */  {1920,1080,      256, 3840,  2160, 240,135, 1, 1, TRUE},
-/* 93 */  {1920,1080, COL24BIT, 3840,  2160, 240,135, 1, 1, TRUE},
+/* 80 */  {1360, 384,        2, 2720,  1536, 170, 48, 1, 2, TRUE},
+/* 81 */  {1360, 384,        4, 2720,  1536, 170, 48, 1, 2, TRUE},
+/* 82 */  {1360, 384,       16, 2720,  1536, 170, 48, 1, 2, TRUE},
+/* 83 */  {1360, 384,      256, 2720,  1536, 170, 48, 1, 2, TRUE},
+/* 84 */  {1360, 384, COL24BIT, 2720,  1536, 170, 36, 1, 2, TRUE},
+/* 85 */  {1360, 768,        2, 2720,  1536, 170, 96, 1, 1, TRUE},
+/* 86 */  {1360, 768,        4, 2720,  1536, 170, 96, 1, 1, TRUE},
+/* 87 */  {1360, 768,       16, 2720,  1536, 170, 96, 1, 1, TRUE},
+/* 88 */  {1360, 768,      256, 2720,  1536, 170, 96, 1, 1, TRUE},
+/* 89 */  {1360, 768, COL24BIT, 2720,  1536, 170, 96, 1, 1, TRUE},
+/* 90 */  {1920, 540,        2, 2720,  1536, 240, 67, 1, 2, TRUE},
+/* 91 */  {1920, 540,        4, 2720,  1536, 240, 67, 1, 2, TRUE},
+/* 92 */  {1920, 540,       16, 2720,  1536, 240, 67, 1, 2, TRUE},
+/* 93 */  {1920, 540,      256, 2720,  1536, 240, 67, 1, 2, TRUE},
+/* 94 */  {1920, 540, COL24BIT, 2720,  1536, 240, 67, 1, 2, TRUE},
+/* 95 */  {1920,1080,        2, 3840,  2160, 240,135, 1, 1, TRUE},
+/* 96 */  {1920,1080,        4, 3840,  2160, 240,135, 1, 1, TRUE},
+/* 97 */  {1920,1080,       16, 3840,  2160, 240,135, 1, 1, TRUE},
+/* 98 */  {1920,1080,      256, 3840,  2160, 240,135, 1, 1, TRUE},
+/* 99 */  {1920,1080, COL24BIT, 3840,  2160, 240,135, 1, 1, TRUE},
 
 #endif /* BRANDY_MODE7ONLY */
 };
